--- a/src/UI/style.css
+++ b/src/UI/style.css
@@ -24,12 +24,17 @@ body{
 	height: 100%;
 	z-index: -1 ;
 }
+.cover.extend{
+	z-index: 100;
+}
+
 .header{
 	background: #01a4ff91;
 	color:  #fff;
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+	height: 70px;
 }
 .header h2{
 	font-size: 40px;
@@ -112,3 +117,240 @@ body{
 /*
 	MAIN BODY, STYLES(center).
 */
+@media (max-width: 733px){
+	.flex-help{
+		flex-direction: column-reverse;
+		align-items: center;
+	}
+	.CoreImage{
+		width: 250px!important;
+		height: 250px!important;
+		margin-right: unset!important;
+		margin-top: -20px!important;
+	}
+	.CallToAction .callToActionHeader h2{
+		margin-top: 10px;
+	}
+	.CallToAction{
+		width: 250px!important;
+		height: 250px!important;
+		padding: 10px 20px;
+	}
+	.CallToAction .buyButton button{
+		position: relative;
+	}
+	.CallToAction .ticketImage img{
+		width: 150px!important;
+	}
+}
+.main{
+	height: calc(100vh - 90px);
+	display: grid;
+	align-content: center;
+	overflow: auto;
+	font-family: poppins;
+}
+.flex-help{
+	display: flex;
+	justify-content: center;
+}
+.CoreImage{
+	position: relative;
+	background: #19f;
+	background-image: url(img/concert.jpg);
+	background-size: cover;
+	width: 350px;
+	height: 350px;
+	margin-top: 25px;
+	margin-right: -20px;
+	border-radius: 20px;
+}
+.CallToAction{
+ 	background: #fff;
+	width: 400px;
+	height: 400px;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.CallToAction .callToActionHeader h2{
+	color: #5A5A5A;
+	letter-spacing: 5px;
+}
+.CallToAction .buyButton button{
+	background: #19f!important;
+	border: none;
+	color: #fff;
+	font-size: 15px;
+	letter-spacing: 2px;
+	padding: 15px 17px;
+	border-radius: 40px;
+	transition: ease-in-out 0.3s;
+}
+.CallToAction .buyButton button:hover{
+	cursor: pointer;
+	letter-spacing: 3px;
+	padding: 15px 25px;
+}
+/*
+		ACOUNT SIGN IN/UP PORTAL:  MAIN DESING
+*/
+.PortalCover{
+	position: absolute;
+	width: 100vw;
+	height: 100vh;
+	top: 0px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+.PortalCover.hidePortal{
+	visibility: hidden!important;
+}
+.PortalCover.showPortal{
+	visibility: visible!important;
+}
+
+.AccountPortal{
+	z-index: 200;
+	position: relative;
+	background: #fff;
+	height: 400px;
+	width: 300px;
+	padding: 10px;
+	border-radius: 20px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+}
+.AccountPortal .top{
+	display: flex;
+	justify-content: space-between;
+}
+.AccountPortal .top .rdioButton{
+	position: relative;
+	background: #E1DFDF;
+	width: 80px;
+	height: 34px;
+	border-radius: 20px;
+	display: flex;
+	align-items: center;
+	margin-left: 20px;
+}
+
+.AccountPortal .top .rdioButton div{
+	margin-left:  5px;
+	background: #19f;
+	height:25px;
+	width: 25px;
+	border-radius: 100%;
+}
+.AccountPortal .Title h2{
+	font-family: poppins;
+	color: #19f;
+	margin-right: 20px;
+}
+.AccountPortal .Title2 h2{
+	font-family: poppins;
+	color: #19f;
+	margin-left: 20px;
+}
+.AccountPortal .Title2 h2:hover, .AccountPortal .Title h2:hover{
+	cursor: pointer;
+	border-bottom: 2px solid #19f;
+}
+.AccountPortal .center{
+ 	position: relative;
+ 	height: 300px;
+ 	overflow: hidden;
+ }
+ .AccountPortal .center .Sign-Up, .AccountPortal .center .Sign-In{
+ 	height: 100%;
+ 	display: flex;
+ 	align-items: center;
+ }
+ .AccountPortal .center .Sign-Up div{
+ 	height: fit-content;
+ 	width: fit-content;
+ 	text-align: center;
+ }
+.AccountPortal .center .Sign-In{
+	background: #fff;
+  	position: absolute;
+  	width: 100%;
+}
+.displaySignIn{
+	top: 0px;
+}
+.AccountPortal .center .Sign-In div{
+	height: fit-content;
+	width: 100%;
+	text-align: center;
+}
+.AccountPortal .submit{
+	background: #19f;
+	width: 55px;
+	height: 55px;
+	border-radius: 100%;
+	margin-left: 50%;
+	transform: translate(-50%);
+}
+.icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 55px;
+  height: 55px;
+  cursor: pointer;
+  margin-left: 10px;
+}
+.arrow {
+  position: absolute;
+  top: 25px;
+  width: 50%;
+  height: 5px;
+  background-color: #fff;
+  animation: arrow 700ms linear infinite;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+}
+
+.arrow::after, .arrow::before {
+  content: '';
+  position: absolute;
+  width: 60%;
+  height: 5px;
+  right: -4px;
+  background-color: #fff;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+}
+
+.arrow::after {
+  top: -5px;
+  transform: rotate(45deg);
+}
+
+.arrow::before {
+  top: 5px;
+  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  transform: rotate(-45deg);
+}
+
+
+.AccountPortal .center .Sign-Up div input, .AccountPortal .center .Sign-In div input{
+	font-family: poppins-light;
+	border: none;
+	background: #fff;	
+	border-bottom: 1px solid #19f;
+	margin-bottom: 30px;
+	color: #19f;
+	outline: none;
+	font-size: 20px;
+	font-weight: 300;
+	width: 200px;
+}
+.AccountPortal .center .Sign-Up div input:nth-child(1){
+	letter-spacing: 10px;
+}
