--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -177,7 +177,8 @@ body{
 	background: white;
 	color: #333;
 	position: absolute;
-	top: 0px;
+	top: 20px;
 	left: 50%;
 	transform: translateX(-50%);
+	padding: 10px;
 }
