--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -181,6 +181,7 @@ body{
 	left: 50%;
 	transform: translateX(-50%);
 	padding: 10px;
+	border-radius: 10px;
 }
 .paymentsetup h2{
 	font-family: poppins!important;
