--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -199,7 +199,7 @@ body{
 .paymentsetup .paymentbody{
 	font-family: poppins-light!important;
 }
-.paymentbody{
+.paymentbody input{
 	font-family: poppins-light;
 	border: none;
 	background: #fff;	
