--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -212,7 +212,7 @@ body{
 	width: 200px;
 	text-align: left!important;
 }
-.paymentbody .submitButton{
+.paymentbody .submitButton button{
 	background: #19f!important;
 	border: none;
 	color: #fff;
