--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -186,6 +186,7 @@ button:hover{
 	transform: translateX(-50%);
 	padding: 15px;
 	border-radius: 10px;
+	z-index: 110px;
 }
 .showpaymentsetup{
 	display: block!important;
