--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -241,5 +241,5 @@ button:hover{
 	transition: ease-in-out 0.3s;
 }
 .paymentbody .submitButton .close{
-	background-color: red;
+	background-color: #ff4b4b!important;
 }
