--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -227,6 +227,25 @@ button:hover{
 	font-weight: 300;
 	width: 200px;
 }
+.verificationError{
+	border: 2px dotted red!important;
+	color: red!important;
+}
+.verificationSuccessfull{
+	display: none;
+	position: absolute;
+	background: #fff;
+	color: #11ff70;
+	font-family: poppins;
+	top: 50%;	
+	margin-left: 50%;
+	transform: translateX(-50%);
+	box-shadow: 2px 2px 12px 0px rgb(0 0 0);
+	width: 250px;
+	padding:10px 0px;
+	text-align: center;
+	z-index: 300;
+}
 .paymentbody .submitButton{
 	text-align: center;
 }
