--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -11,6 +11,9 @@ body{
 	font-family: poppins-light;
 	overflow: hidden;
 }
+.main{
+	overflow: auto;
+}
 .remove{
 	display: none!important;
 }
@@ -27,7 +30,6 @@ button:hover{
 	margin-top: 30px;
 	margin-left: 40px;
 	margin-right: 40px;
-	overflow: auto;
 }
 .intro span:nth-child(1){
 	font-family: poppins!important;
