--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -196,6 +196,7 @@ button:hover{
 	border-radius: 10px;
 	padding: 10px 20px;
 	margin-top: 15px;
+	border-right: 3px solid #ff4b4b;
 }
 .TicketContentsBody .ConcertTicket tt span{
 	color: #19f;
