--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -205,6 +205,7 @@ button:hover{
 }
 .TicketContentsBody .status{
 	background: #19f;
+	font-size: 20px;
 }
 .TicketContentsBody .ConcertTicket tt span{
 	color: #19f;
