--- a/src/pages/ADMIN/style.css
+++ b/src/pages/ADMIN/style.css
@@ -267,7 +267,7 @@ main{
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
-	box-shadow: 2px 2px 5px 10px rgba(0, 0, 0, .2);
+	box-shadow: 1px 2px 8px 3px rgb(0 0 0 / 20%);
 }
 .AccountPortal .top{
 	text-align: center;
