--- a/src/pages/ADMIN/style.css
+++ b/src/pages/ADMIN/style.css
@@ -248,6 +248,7 @@ main{
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	overflow: auto;
 }
 .PortalCover.hidePortal{
 	visibility: hidden!important;
