--- a/src/UI/user.css
+++ b/src/UI/user.css
@@ -200,8 +200,8 @@ button:hover{
 	border-left: 3px solid #ff4b4b;
 }
 .verifiedUserTi{
-	border-right: 3px solid #00ff40;
-	border-left: 3px solid #00ff40;
+	border-right: 3px solid #00ff40!important;
+	border-left: 3px solid #00ff40!important;
 }
 .TicketContentsBody .status{
 	font-size: 15px;
